--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="content-text-header flex-colum-6 text-center text-left">
         <h1>a simple bookmark manager</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam beatae voluptate excepturi pariatur quos.</p>
-        <a href="#" class="btn">Get it on Chrome</a>
+        <a href="#" class="btn btn-blue">Get it on Chrome</a>
         <a href="#" class="btn">Get it on Firefox</a>
       </div>
     </div>
@@ -75,7 +75,7 @@
           <div class="content-text-simple flex-colum-6 text-center text-left">
             <h2>bookmark in one click</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam vel ipsam alias quia architecto, tempore nostrum modi necessitatibus maiores doloribus minima, explicabo esse aperiam quam perferendis, iure dolorum. Sunt, pariatur.</p>
-            <a href="" class="btn">more info</a>
+            <a href="" class="btn btn-blue">more info</a>
           </div>
         </div>
         <div id="speedy" class="flex x-space-between y-center">
@@ -85,7 +85,7 @@
           <div class="content-text-speedy flex-colum-6 text-center text-left">
             <h2>intelligent search</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam vel ipsam alias quia architecto, tempore nostrum modi necessitatibus maiores doloribus minima, explicabo esse aperiam quam perferendis, iure dolorum. Sunt, pariatur.</p>
-            <a href="" class="btn">more info</a>
+            <a href="" class="btn btn-blue">more info</a>
           </div>
         </div>
         <div id="easy" class="flex x-space-between y-center">
@@ -95,7 +95,7 @@
           <div class="content-text-easy flex-colum-6 text-center text-left">
             <h2>share your bookmarks</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam vel ipsam alias quia architecto, tempore nostrum modi necessitatibus maiores doloribus minima, explicabo esse aperiam quam perferendis, iure dolorum. Sunt, pariatur.</p>
-            <a href="" class="btn">more info</a>
+            <a href="" class="btn btn-blue">more info</a>
           </div>
         </div>
       </div>
@@ -117,7 +117,7 @@
           <span>Minimum version 62</span>
           <img src="images/bg-dots.svg" alt="">
           <footer class="footer-extension">
-            <a href="" class="btn">add & install extension</a>
+            <a href="" class="btn btn-blue">add & install extension</a>
           </footer>
         </div>
       </div>
@@ -130,7 +130,7 @@
           <span>Minimum version 55</span>
           <img src="images/bg-dots.svg" alt="">
           <footer class="footer-extension">
-            <a href="" class="btn">add & install extension</a>
+            <a href="" class="btn btn-blue">add & install extension</a>
           </footer>
         </div>
       </div>
@@ -143,7 +143,7 @@
           <span>Minimum version 46</span>
           <img src="images/bg-dots.svg" alt="">
           <footer class="footer-extension">
-            <a href="" class="btn">add & install extension</a>
+            <a href="" class="btn btn-blue">add & install extension</a>
           </footer>
         </div>
       </div>
@@ -191,7 +191,7 @@
       </div>
     </div>
     <div class="text-center">
-      <a href="" class="btn">more info</a>
+      <a href="" class="btn btn-blue">more info</a>
     </div>
   </section>
   <footer class="site-footer text-center">
@@ -200,7 +200,7 @@
       <P>Stay up-to-date width what we're doing</P>
       <div class="content-contact flex x-center y-center">
         <input type="email">
-        <a href="#" class="btn contact">contact us</a>
+        <a href="#" class="btn btn-red">contact us</a>
       </div>
     </div>
 
